--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@react-icons/all-files": "^4.1.0",
     "autoprefixer": "10.4.15",
+    "framer-motion": "^10.16.4",
     "next": "13.4.19",
+    "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.5",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-top-loading-bar": "^2.3.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "3.3.3"
   }
 }
