--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-lines-ellipsis": "^0.15.4",
     "react-top-loading-bar": "^2.3.1",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "3.3.3"
